--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,7 @@
 <ion-content id="content" scrollY="false">
     <ion-header class="ion-no-border">
         <ion-toolbar>
-            <ion-title size="large">
-                <i class="fa fa-bars"></i>
-            </ion-title>
+            <i class="fa fa-map-marker" routerLink="/tabs"></i>
         </ion-toolbar>
     </ion-header>
 
