--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,33 +5,34 @@ ion-content {
 ion-toolbar {
   --background: tranparent;
   --border-width: 0 0 0 !important;
-  text-align: right;
   color: #fff;
+  text-align: right;
+  padding-right: 15px;
 }
 
-.header-md:after{
+
+.header-md:after {
   background-image: none;
 }
 
-.middle{
-  margin:auto;
+.middle {
+  margin: auto;
   display: block;
   width: 300px;
   height: 420px;
-  top:0;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   position: absolute;
-  font-family: 'Raleway', sans-serif;
 }
 
 .pulse {
-  margin:auto;
+  margin: auto;
   display: block;
   width: 80px;
   height: 80px;
-  top:-220px;
+  top: -220px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -51,12 +52,12 @@ ion-toolbar {
   animation: pulse 2.6s infinite;
 }
 
-#icon{
+#icon {
   font-size: 40px;
   color: #fff;
 }
 
-.title{
+.title {
   position: absolute;
   width: 100%;
   text-align: center;
@@ -66,7 +67,7 @@ ion-toolbar {
   font-size: 1.8rem;
 }
 
-.subtitle{
+.subtitle {
   position: absolute;
   width: 100%;
   text-align: center;
