--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,9 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+:root {
+  --ion-font-family: 'Raleway', sans-serif !important;
+  --ion-color-primary: #5540ff;
+}
+
