--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content id="content" scrollY="false">
     <ion-header class="ion-no-border">
         <ion-toolbar>
-            <i class="fa fa-map-marker" routerLink="/tabs"></i>
+            <i class="fa fa-bars" routerLink="/tabs"></i>
         </ion-toolbar>
     </ion-header>
 
