--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -14,7 +14,7 @@
             </ion-tab-button>
 
             <ion-tab-button tab="about-us">
-                <i class="fa fa-building-o icons"></i>
+                <i class="fa fa-users"></i>
             </ion-tab-button>
         </ion-tab-bar>
     </ion-tabs>
